# TestCaseKeyFor

./: .env.example  .gitignore  API_EXAMPLES.md  README.md  docker-compose.yml  pyproject.toml  setup.sh
app/: main.py
app/api/: middleware.py
app/api/routes/: users.py
app/core/: config.py
app/domain/models/: user.py
app/domain/repositories/: __init__.py  user_repository.py
app/domain/services/: user_service.py
app/infrastructure/database/: config.py
app/infrastructure/logging/: __init__.py  config.py
app/infrastructure/messaging/: __init__.py  consumer.py  events.py  producer.py
app/schemas/: user.py
migrations/: env.py  script.py.mako
migrations/versions/: 001_initial_migration.py
